--- a/contact us.html
+++ b/contact us.html
@@ -98,7 +98,7 @@
         .contact-banner {
             background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
                         url('https://images.pexels.com/photos/6646974/pexels-photo-6646974.jpeg');
-            height: 400px;
+            height: 200px;
             background-size: cover;
             background-position: center;
             display: flex;
@@ -338,7 +338,7 @@
                 </div>
 
                 <div class="nav-menu border">
-                    <a href="#" class="nav-link">About Us</a>
+                    <a href="about_us.html" class="nav-link">About Us</a>
                 </div>
 
                 <div class="nav-franchise border">
@@ -346,7 +346,7 @@
                 </div>
 
                 <div class="nav-franchise border">
-                    <a href="#" class="nav-link">Gallery</a>
+                    <a href="gallery.html" class="nav-link">Gallery</a>
                 </div>
 
                 <div class="nav-contact border">
@@ -361,7 +361,7 @@
     </header>
 
     <section class="contact-banner">
-        <h2>Connect Us anytime</h2>
+        <h2>Contact Us</h2>
     </section>
 
     <div class="main-content">
@@ -391,7 +391,7 @@
             </div>
 
             <div class="contact-form">
-                <h2 style="margin-bottom: 25px; text-align: center;">Send Us a Message</h2>
+                <h2 style="margin-bottom: 25px; text-align: center;">Send Us Your Feedback</h2>
                 <form>
                     <div class="form-group">
                         <input type="text" placeholder="Your Full Name" required>
