--- a/franchise.html
+++ b/franchise.html
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="nav-menu border">
-                    <a href="#" class="nav-link">About Us</a>
+                    <a href="about_us.html" class="nav-link">About Us</a>
                 </div>
 
                 <div class="nav-franchise border">
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="nav-franchise border">
-                    <a href="#" class="nav-link">Gallery</a>
+                    <a href="gallery.html" class="nav-link">Gallery</a>
                 </div>
 
                 <div class="nav-contact border">
