--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
                     </div>
 
                     <div class="nav-menu border">
-                        <a href="#">About Us</a>
+                        <a href="about_us.html">About Us</a>
                     </div>
 
                     <div class="nav-franchise border">
@@ -38,7 +38,7 @@
                     </div>
 
                     <div class="nav-franchise border">
-                        <a href="#">Gallery</a>
+                        <a href="gallery.html">Gallery</a>
                     </div>
 
                     <div class="nav-contact border">
