--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AV vadapav</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="home-responsive.css">
     <link rel="website-icon" type="image/png" href="favicon-32x32.png">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&icon_names=location_on" />
@@ -24,7 +25,17 @@
             </div>
 
             <nav class="navi">
+
+                <div class="menu-icon">
+                    <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
+                </div>
+
                 <div class="navbar">
+
+                    <div class="close-icon" onclick="toggleMenu()">
+                        <i class="fa-solid fa-xmark"></i>
+                    </div>
+
                     <div class="nav-home border">
                         <a href="home.html">Home</a>
                     </div>
@@ -47,7 +58,14 @@
                     <div class="nav-contact border">
                         <a href="AdminLogin.php">Login</a>
                     </div>
+
+                    <!-- <div class="menu-icon">
+                        <i class="fa-solid fa-bars"></i>
+                    </div> -->
                 </div>
+                
+                
+
             </nav>
         </header>
 
@@ -315,7 +333,8 @@
 
 
     <script src="home.js"></script>
-
+    <script src="https://kit.fontawesome.com/f8e1a90484.js" crossorigin="anonymous"></script>  <!-- for menu-icon -->
+   
 </body>
 
 </html>
