--- a/about_us.html
+++ b/about_us.html
@@ -28,26 +28,26 @@
                     <i class="fa-solid fa-xmark"></i>
                 </div>
 
-                <div class="nav-home border">
-                    <a href="home.html">Home</a>
+                <div class="nav-home">
+                    <a href="index.html">Home</a>
                 </div>
 
-                <div class="nav-menu border">
-                    <a href="about_us.html">About Us</a>
+                <div class="nav-about">
+                    <a href="about_us.html" class="active">About Us</a>
                 </div>
 
-                <div class="nav-franchise border">
+                <div class="nav-franchise">
                     <a href="franchise.html">Franchise</a>
                 </div>
 
-                <div class="nav-franchise border">
+                <div class="nav-gallery">
                     <a href="gallery.html">Gallery</a>
                 </div>
 
-                <div class="nav-contact border">
+                <div class="nav-contact">
                     <a href="contact us.html">Contact Us</a>
                 </div>
-                <div class="nav-contact border">
+                <div class="nav-login">
                     <a href="AdminLogin.php">Login</a>
                 </div>
             </div>
