--- a/franchise.html
+++ b/franchise.html
@@ -28,27 +28,27 @@
                     <i class="fa-solid fa-xmark"></i>
                 </div>
 
-                <div class="nav-home border">
-                    <a href="home.html" class="nav-link">Home</a>
+                <div class="nav-home">
+                    <a href="index.html" class="nav-link">Home</a>
                 </div>
 
-                <div class="nav-menu border">
-                    <a href="about_us.html" class="nav-link">About Us</a>
+                <div class="nav-about">
+                    <a href="about_us.html">About Us</a>
                 </div>
 
-                <div class="nav-franchise border">
-                    <a href="franchise.html" class="nav-link">Franchise</a>
+                <div class="nav-franchise">
+                    <a href="franchise.html" class="active">Franchise</a>
                 </div>
 
-                <div class="nav-franchise border">
-                    <a href="gallery.html" class="nav-link">Gallery</a>
+                <div class="nav-gallery">
+                    <a href="gallery.html">Gallery</a>
                 </div>
 
-                <div class="nav-contact border">
-                    <a href="contact us.html" class="nav-link">Contact Us</a>
+                <div class="nav-contact">
+                    <a href="contact us.html">Contact Us</a>
                 </div>
 
-                <div class="nav-contact border">
+                <div class="nav-login">
                     <a href="AdminLogin.php">Login</a>
                 </div>
             </div>
