--- a/gallery.html
+++ b/gallery.html
@@ -28,31 +28,36 @@
                     <i class="fa-solid fa-xmark"></i>
                 </div>
 
-                <div class="nav-home border">
-                    <a href="home.html" class="nav-link">Home</a>
+                <div class="nav-home">
+                    <a href="index.html">Home</a>
                 </div>
 
-                <div class="nav-menu border">
-                    <a href="about_us.html" class="nav-link">About Us</a>
+                <div class="nav-about">
+                    <a href="about_us.html">About Us</a>
                 </div>
 
-                <div class="nav-franchise border">
-                    <a href="franchise.html" class="nav-link">Franchise</a>
+                <div class="nav-franchise">
+                    <a href="franchise.html">Franchise</a>
                 </div>
 
-                <div class="nav-franchise border">
-                    <a href="gallery.html" class="nav-link">Gallery</a>
+                <div class="nav-gallery">
+                    <a href="gallery.html" class="active">Gallery</a>
                 </div>
 
-                <div class="nav-contact border">
-                    <a href="contact us.html" class="nav-link">Contact Us</a>
+                <div class="nav-contact">
+                    <a href="contact us.html">Contact Us</a>
                 </div>
 
-                <div class="nav-contact border">
+                <div class="nav-login">
                     <a href="AdminLogin.php">Login</a>
                 </div>
             </div>
         </nav>
+
+        <div class="about-us-header">
+            <h1>Our Gallery</h1>
+        </div>
+
     </header>
 
 
@@ -103,30 +108,6 @@
             </div>
 
             <div class="box6 box">
-                <div class="box-content">
-
-                    <div class="box-img" style="background-image: url('box3_img.jpg');"></div>
-
-                </div>
-            </div>
-
-            <div class="box7 box">
-                <div class="box-content">
-
-                    <div class="box-img" style="background-image: url('box3_img.jpg');"></div>
-
-                </div>
-            </div>
-
-            <div class="box8 box">
-                <div class="box-content">
-
-                    <div class="box-img" style="background-image: url('box3_img.jpg');"></div>
-
-                </div>
-            </div>
-
-            <div class="box9 box">
                 <div class="box-content">
 
                     <div class="box-img" style="background-image: url('box3_img.jpg');"></div>
